--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
   <dependencies>
 
+    <!-- Kotlin -->
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -36,6 +37,7 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- JUnit5 -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -56,12 +58,14 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- AssertJ -->
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.11.1</version>
     </dependency>
 
+    <!-- Mockito -->
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -72,6 +76,13 @@
       <groupId>com.nhaarman.mockitokotlin2</groupId>
       <artifactId>mockito-kotlin</artifactId>
       <version>2.0.0-RC1</version>
+    </dependency>
+
+    <!-- Graph theory -->
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-core</artifactId>
+      <version>1.3.0</version>
     </dependency>
 
   </dependencies>
