--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -60,6 +60,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>1.3.2</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- AssertJ -->
     <dependency>
       <groupId>org.assertj</groupId>
@@ -96,6 +103,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <executable>true</executable>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
