--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0</version>
 
   <properties>
     <kotlin.version>1.3.10</kotlin.version>
