--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>0.5.0</version>
+  <version>0.6.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
