--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,12 +6,13 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>1.10.0</version>
+  <version>1.11.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <kotlin.version>1.3.10</kotlin.version>
+    <kotlin.version>1.3.41</kotlin.version>
+    <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     <junit.jupiter.version>5.3.1</junit.jupiter.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
