--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>1.11.0</version>
+  <version>1.12.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -67,6 +67,7 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.11.1</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Mockito -->
@@ -74,12 +75,14 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.8.9</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.nhaarman.mockitokotlin2</groupId>
       <artifactId>mockito-kotlin</artifactId>
       <version>2.0.0-RC1</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Graph theory -->
