--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>1.11.0</version>
+  <version>1.12.0-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -78,6 +78,7 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.11.1</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Mockito -->
