--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>1.12.1</version>
+  <version>1.13.0-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -83,15 +83,9 @@
 
     <!-- Mockito -->
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>2.8.9</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.nhaarman.mockitokotlin2</groupId>
       <artifactId>mockito-kotlin</artifactId>
-      <version>2.0.0-RC1</version>
+      <version>2.2.0</version>
     </dependency>
 
     <!-- Adventure Book Resolver -->
