--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>adventurebook-resolver</artifactId>
-  <version>1.14.1</version>
+  <version>1.15.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
