--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>1.16.1</version>
+  <version>1.17.0-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
