--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>1.17.1</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -85,11 +85,6 @@
       <version>1.3.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.jgrapht</groupId>
-      <artifactId>jgrapht-ext</artifactId>
-      <version>1.3.0</version>
-    </dependency>
   </dependencies>
 
   <build>
