--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>1.17.1</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <properties>
     <java.version>1.8</java.version>
@@ -94,6 +94,14 @@
       <artifactId>abr-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <!-- Graph Rendering -->
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-ext</artifactId>
+      <version>1.3.0</version>
+    </dependency>
+
 
   </dependencies>
 
