--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -4,19 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.d20charactersheet.adventurebookresolver</groupId>
-  <artifactId>abr-core</artifactId>
-  <version>2.1.0</version>
-
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <kotlin.version>1.3.41</kotlin.version>
-    <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-    <junit.jupiter.version>5.3.1</junit.jupiter.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <dependencies>
 
     <!-- Kotlin -->
@@ -58,7 +45,7 @@
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.3.2</version>
+      <version>1.8.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -66,7 +53,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.11.1</version>
+      <version>3.22.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -78,14 +65,34 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- ArchUnit -->
+    <dependency>
+      <groupId>com.tngtech.archunit</groupId>
+      <artifactId>archunit-junit5</artifactId>
+      <version>0.22.0</version>
+    </dependency>
+
     <!-- Graph theory -->
     <dependency>
       <groupId>org.jgrapht</groupId>
       <artifactId>jgrapht-core</artifactId>
-      <version>1.3.0</version>
+      <version>1.5.1</version>
     </dependency>
 
   </dependencies>
+  <groupId>com.d20charactersheet.adventurebookresolver</groupId>
+  <artifactId>abr-core</artifactId>
+
+  <version>2.2.0-SNAPSHOT</version>
+
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <kotlin.version>1.6.10</kotlin.version>
+    <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
+    <junit.jupiter.version>5.8.2</junit.jupiter.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
