--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,12 +12,12 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>2.1.0</version>
+  <version>2.2.0-SNAPSHOT</version>
 
   <properties>
-    <java.version>1.8</java.version>
-    <kotlin.version>1.3.41</kotlin.version>
-    <junit.jupiter.version>5.3.1</junit.jupiter.version>
+    <java.version>11</java.version>
+    <kotlin.version>1.6.10</kotlin.version>
+    <junit.jupiter.version>5.8.2</junit.jupiter.version>
   </properties>
 
   <dependencies>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.springframework.shell</groupId>
       <artifactId>spring-shell-starter</artifactId>
-      <version>2.0.0.RELEASE</version>
+      <version>2.0.1.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -55,21 +55,18 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.3.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -77,7 +74,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.11.1</version>
+      <version>3.22.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -92,14 +89,14 @@
     <dependency>
       <groupId>com.d20charactersheet.adventurebookresolver</groupId>
       <artifactId>abr-core</artifactId>
-      <version>${project.version}</version>
+      <version>2.2.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Graph Rendering -->
     <dependency>
       <groupId>org.jgrapht</groupId>
       <artifactId>jgrapht-ext</artifactId>
-      <version>1.3.0</version>
+      <version>1.5.1</version>
     </dependency>
 
 
