--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -83,7 +83,7 @@
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
 
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.2.0</version>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
