--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>com.d20charactersheet.adventurebookresolver</groupId>
+  <artifactId>abr-core</artifactId>
+  <version>2.3.0-SNAPSHOT</version>
+
   <dependencies>
 
     <!-- Kotlin -->
@@ -69,7 +73,7 @@
     <dependency>
       <groupId>com.tngtech.archunit</groupId>
       <artifactId>archunit-junit5</artifactId>
-      <version>0.22.0</version>
+      <version>0.23.1</version>
     </dependency>
 
     <!-- Graph theory -->
@@ -80,10 +84,6 @@
     </dependency>
 
   </dependencies>
-  <groupId>com.d20charactersheet.adventurebookresolver</groupId>
-  <artifactId>abr-core</artifactId>
-
-  <version>2.2.0</version>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
