--- a/abr-core/pom.xml
+++ b/abr-core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-core</artifactId>
-  <version>2.3.0</version>
+  <version>2.4.0-SNAPSHOT</version>
 
   <dependencies>
 
@@ -63,9 +63,9 @@
 
     <!-- Mockito Kotlin -->
     <dependency>
-      <groupId>com.nhaarman.mockitokotlin2</groupId>
+      <groupId>org.mockito.kotlin</groupId>
       <artifactId>mockito-kotlin</artifactId>
-      <version>2.2.0</version>
+      <version>4.0.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -88,7 +88,7 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <kotlin.version>1.6.10</kotlin.version>
+    <kotlin.version>1.6.20</kotlin.version>
     <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
     <junit.jupiter.version>5.8.2</junit.jupiter.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
