--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>2.3.0</version>
+  <version>2.4.0-SNAPSHOT</version>
 
   <properties>
     <java.version>11</java.version>
@@ -78,18 +78,19 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Mockito -->
+    <!-- Mockito Kotlin -->
     <dependency>
-      <groupId>com.nhaarman.mockitokotlin2</groupId>
+      <groupId>org.mockito.kotlin</groupId>
       <artifactId>mockito-kotlin</artifactId>
-      <version>2.2.0</version>
+      <version>4.0.0</version>
+      <scope>test</scope>
     </dependency>
 
     <!-- Adventure Book Resolver -->
     <dependency>
       <groupId>com.d20charactersheet.adventurebookresolver</groupId>
       <artifactId>abr-core</artifactId>
-      <version>2.3.0</version>
+      <version>2.4.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Graph Rendering -->
