--- a/abr-shell-ui/pom.xml
+++ b/abr-shell-ui/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.d20charactersheet.adventurebookresolver</groupId>
   <artifactId>abr-shell-ui</artifactId>
-  <version>2.4.0</version>
+  <version>2.5.0-SNAPSHOT</version>
 
   <properties>
     <java.version>11</java.version>
@@ -90,7 +90,7 @@
     <dependency>
       <groupId>com.d20charactersheet.adventurebookresolver</groupId>
       <artifactId>abr-core</artifactId>
-      <version>2.4.0</version>
+      <version>2.5.0-SNAPSHOT</version>
     </dependency>
 
     <!-- Graph Rendering -->
